2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-account-widget-jabber.glade: Add an example
	label for jid.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-window.c:
	* libempathy-gtk/gossip-chat-window.h:
	* src/empathy-chat-main.c:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-tp-chat.h: When a new text channel arrives, check
	if there is no existing GossipChat object for it.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* src/Makefile.am:
	* src/empathy-contact-list-main.c: Removing empathy-contact-list
	program, it's useless.

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Change version from 0.3darcs to 0.3svn

2006-05-13  Xavier Claessens  <xclaesse@gmail.com>

	* autogen.sh: Set executable
	* po/POTFILES.in: Update translatable files

2006-03-16  Xavier Claessens  <xclaesse@gmail.com>

	* Initial version
