@@ -26,3 +26,4 @@ libempathy-gtk/gossip-presence-chooser.glade
 libempathy-gtk/gossip-private-chat.c
 libempathy-gtk/gossip-theme-manager.c
 
+src/empathy-main.c
