@@ -1,3 +1,14 @@
+2006-05-14  Xavier Claessens  <xclaesse@gmail.com>
+
+	* src/empathy-chat-main.c:
+	* src/Makefile.am:
+	* src/empathy-main.c:
+	* po/POTFILES.in
+	* po/LINGUAS:
+	* TODO: Setting up i18n support.
+
+	* po/Makefile.in.in: Removed, it's generated at build time.
+
 2006-05-13  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy-gtk/gossip-account-widget-jabber.glade: Add an example
